feat(note): Items on startup page now resize to adjust to window width
Also cleaned up a bit

--- a/WID/App.xaml
+++ b/WID/App.xaml
@@ -13,7 +13,7 @@
             <!-- Other app resources here -->
             <Style
                 TargetType="StackPanel"
-                x:Key="AddItemFlyout"
+                x:Key="FlyoutButtonStackPanel"
                 >
                 <Setter Property="Orientation" Value="Horizontal" />
                 <Setter Property="Spacing" Value="10" />
