--- a/WID/MainPage.xaml
+++ b/WID/MainPage.xaml
@@ -5,7 +5,9 @@
     xmlns:local="using:WID"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    SizeChanged="ResizeMenuElements"
+    >
 
     <Page.Background>
         <AcrylicBrush
@@ -15,7 +17,10 @@
             FallbackColor="#FF888888" />
     </Page.Background>
 
-    <Grid>
+    <Grid
+        HorizontalAlignment="Stretch"
+        VerticalAlignment="Stretch"
+        >
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -59,12 +64,74 @@
 
         <GridView
             x:Name="gvNotebooks"
+            HorizontalAlignment="Center"
+            Width="Auto"
             IsItemClickEnabled="True"
             CanDrag="False"
             ReorderMode="Disabled"
             CanReorderItems="False"
             AllowDrop="False"
             Grid.Row="1"
-            />
+            >
+            <GridView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <ItemsWrapGrid
+                        Orientation="Horizontal"
+                        />
+                </ItemsPanelTemplate>
+            </GridView.ItemsPanel>
+            <GridView.ItemTemplate>
+                <DataTemplate
+                    x:DataType="local:MenuElement"
+                    >
+                    <Grid
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        Margin="10"
+                        >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Button
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Top"
+                            Margin="10"
+                            >
+                            <FontIcon
+                                FontFamily="Segoe Fluent Icons"
+                                Glyph="&#xE712;"
+                                />
+                        </Button>
+                        <Viewbox
+                            Stretch="UniformToFill"
+                            Margin="50"
+                            Grid.Row="0"
+                            >
+                            <Grid>
+                                <FontIcon
+                                    x:Name="fiFolderIcon"
+                                    x:Load="{x:Bind isFolder.Equals(x:True)}"
+                                    FontFamily="Segoe Fluent Icons"
+                                    Glyph="&#xE8B7;"
+                                    />
+                                <local:NotebookPage
+                                    x:Name="npPagePreview"
+                                    x:Load="{x:Bind isFolder.Equals(x:False)}"
+                                    />
+                            </Grid>
+                        </Viewbox>
+                        <TextBlock
+                            Text="{x:Bind itemName}"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            Margin="10"
+                            FontSize="18"
+                            Grid.Row="1"
+                            />
+                    </Grid>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
     </Grid>
 </Page>
