feat(mainpage): Begin implementation of opening notebooks again

--- a/WID/MainPage.xaml
+++ b/WID/MainPage.xaml
@@ -64,6 +64,7 @@
 
         <GridView
             x:Name="gvNotebooks"
+            ItemClick="OpenNotebook"
             HorizontalAlignment="Center"
             Width="Auto"
             IsItemClickEnabled="True"
