feat(mainpage): Now closing the file options flyout after action

--- a/WID/MainPage.xaml
+++ b/WID/MainPage.xaml
@@ -112,6 +112,8 @@
                                 />
                             <Button.Flyout>
                                 <Flyout
+                                    Opened="FileOptionsFlyoutOpened"
+                                    Closed="FileOptionsFlyoutClosed"
                                     Placement="BottomEdgeAlignedRight"
                                     >
                                     <StackPanel
