feat(note): Added ability to navigate to a page by clicking on its thumbnail

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -264,6 +264,11 @@
                     Orientation="Vertical"
                     Spacing="20"
                     >
+                    <StackPanel.ChildrenTransitions>
+                        <TransitionCollection>
+                            <ReorderThemeTransition />
+                        </TransitionCollection>
+                    </StackPanel.ChildrenTransitions>
                 </StackPanel>
             </ScrollViewer>
         </SplitView>
