--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -281,6 +281,13 @@
                         ReorderMode="Enabled"
                         DragItemsCompleted="PagesReordered"
                         >
+                        <GridView.ItemContainerTransitions>
+                            <TransitionCollection>
+                                <EntranceThemeTransition
+                                    IsStaggeringEnabled="True"
+                                    />
+                            </TransitionCollection>
+                        </GridView.ItemContainerTransitions>
                         <GridView.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <ItemsWrapGrid
