feat(note): Added ability to move RichEditBoxes around on the pages
Also begin implementation of note thumbnails on the mainpage

--- a/WID/MainPage.xaml
+++ b/WID/MainPage.xaml
@@ -101,6 +101,9 @@
                             <RowDefinition Height="*" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
+                        <Image
+                            Source="{x:Bind itemName}"
+                            />
                         <Button
                             HorizontalAlignment="Right"
                             VerticalAlignment="Top"
