--- a/WID/OnPageText.xaml
+++ b/WID/OnPageText.xaml
@@ -24,6 +24,7 @@
             <RichEditBox
                 x:Name="reb"
                 TextWrapping="WrapWholeWords"
+                IsReadOnly="False"
                 FontSize="36"
                 Foreground="Black"
                 />
