feat(mainpage): Begin implementation of notebook previews

--- a/WID/MainPage.xaml
+++ b/WID/MainPage.xaml
@@ -195,6 +195,7 @@
                                 <local:NotebookPage
                                     x:Name="npPagePreview"
                                     x:Load="{x:Bind isFolder.Equals(x:False)}"
+                                    Loaded="LoadPagePreview"
                                     />
                             </Grid>
                         </Viewbox>
