--- a/WID/NotebookPage.xaml
+++ b/WID/NotebookPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="White"
-    Height="Auto"
+    Height="400"
     Width="Auto"
     Canvas.ZIndex="-1"
     >
