feat(mainpage): Thumbnail previews on mainpage now available, need optimization
Also deleted some commented lines, increased consistency in coding style.

--- a/WID/MainPage.xaml
+++ b/WID/MainPage.xaml
@@ -118,9 +118,6 @@
                             <RowDefinition Height="*" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <Image
-                            Source="{x:Bind itemName}"
-                            />
                         <Button
                             HorizontalAlignment="Right"
                             VerticalAlignment="Top"
@@ -202,7 +199,7 @@
                         <TextBlock
                             Text="{x:Bind itemName, Mode=OneWay}"
                             TextWrapping="NoWrap"
-                            TextAlignment="Left"
+                            TextAlignment="Center"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Stretch"
                             Margin="10"
