chore(note): Rewrote some more stuff

--- a/WID/MainPage.xaml
+++ b/WID/MainPage.xaml
@@ -82,7 +82,7 @@
         <GridView
             x:Name="gvNotebooks"
             ItemClick="OpenNotebook"
-            HorizontalAlignment="Center"
+            HorizontalAlignment="Left"
             Width="Auto"
             IsItemClickEnabled="True"
             CanDrag="False"
