feat(note): Text tools now only fade in when needed
Still have to fix their behaviour to stay faded in when in focus

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -42,13 +42,20 @@
         </Grid>
 
         <Popup
+            x:Name="ppTextTools"
             Loaded="ToolPopupLoaded"
             Height="Auto"
             HorizontalAlignment="Center"
             VerticalAlignment="Top"
             VerticalOffset="40"
             IsOpen="True"
+            Opacity="0"
+            IsHitTestVisible="False"
             >
+            <Popup.OpacityTransition>
+                <ScalarTransition />
+            </Popup.OpacityTransition>
+            
             <Border
                 BorderThickness="4"
                 CornerRadius="8"
@@ -319,6 +326,7 @@
                     >
                     <StackPanel.ChildrenTransitions>
                         <TransitionCollection>
+                            <EntranceThemeTransition />
                             <ReorderThemeTransition />
                         </TransitionCollection>
                     </StackPanel.ChildrenTransitions>
