--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -102,6 +102,10 @@
                             />
                     </Button>
                     <Button>
+                        Superscript
+                    </Button>
+                    <Button>
+                        Subscript
                     </Button>
                     <TextBox
                         Width="200"
