feat(note): Added nonfunctional (for now) click superscript and subscript functions

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -101,10 +101,14 @@
                             TextDecorations="Strikethrough"
                             />
                     </Button>
-                    <Button>
+                    <Button
+                        Click="ToggleSuperscriptText"
+                        >
                         Superscript
                     </Button>
-                    <Button>
+                    <Button
+                        Click="ToggleSubscriptText"
+                        >
                         Subscript
                     </Button>
                     <TextBox
