--- a/WID/OnPageText.xaml
+++ b/WID/OnPageText.xaml
@@ -9,6 +9,7 @@
     Background="Transparent"
     GotFocus="StartWriting"
     LostFocus="StopWriting"
+    ManipulationMode="TranslateX,TranslateY"
     >
 
     <Border
