feat(note): Rewrote Notebookpages to render images on a CanvasControl instead of as Image elements
Begin implementation of page template rendering with CanvasControl

--- a/WID/CreateNewNotebookOptions.xaml
+++ b/WID/CreateNewNotebookOptions.xaml
@@ -82,8 +82,11 @@
                         />
 
                     <Slider
+                        x:Name="slTemplateSpacing"
+                        ValueChanged="TemplateSpacingChanged"
                         Width="170"
                         HorizontalAlignment="Left"
+                        Value="120"
                         Minimum="20"
                         Maximum="200"
                         StepFrequency="10"
