feat(note): Invalidating CanvasControl in order to draw template
CanvasControl doesn't always draw pattern when opening create notebook menu (top left button on mainpage)

--- a/WID/NotebookPage.xaml
+++ b/WID/NotebookPage.xaml
@@ -19,6 +19,8 @@
         Loaded="SetTemplateCanvasDimensions"
         Draw="DrawBg"
         ClearColor="White"
+        HorizontalAlignment="Stretch"
+        VerticalAlignment="Stretch"
         />
 
     <InkCanvas
