fix(note): Using CanvasVirtualControl for drawing background in an attempt to make template responsive on create notebook options

--- a/WID/NotebookPage.xaml
+++ b/WID/NotebookPage.xaml
@@ -14,9 +14,11 @@
     CornerRadius="40"
     >
 
-    <drawing:CanvasControl
+    <drawing:CanvasVirtualControl
         x:Name="ccTemplateCanvas"
-        Draw="DrawBg"
+        RegionsInvalidated="DrawBg"
+        CreateResources="CreateBgImage"
+        UseSharedDevice="True"
         ClearColor="White"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Stretch"
