fix(note): Reverted changes bacause of PageTemplate
Changed NotebookPage to use BitmapImage instead of WriteableBitmap (less RAM usage now); Removed CanvasControl from NotebookPage; Removed drawing of PagePattern

--- a/WID/NotebookPage.xaml
+++ b/WID/NotebookPage.xaml
@@ -14,14 +14,12 @@
     CornerRadius="40"
     >
 
-    <drawing:CanvasVirtualControl
-        x:Name="ccTemplateCanvas"
-        RegionsInvalidated="DrawBg"
-        CreateResources="CreateBgImage"
-        UseSharedDevice="True"
-        ClearColor="White"
+    <Image
+        x:Name="bgImg"
+        IsHitTestVisible="False"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Stretch"
+        Stretch="Fill"
         />
 
     <InkCanvas
