--- a/WID/CreateNewNotebookOptions.xaml
+++ b/WID/CreateNewNotebookOptions.xaml
@@ -34,6 +34,7 @@
 
                 <local:NotebookPage
                     x:Name="npTemplatePreview"
+                    initWithTemplate="True"
                     Width="2100"
                     Height="2970"
                     />
